--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.css
@@ -2,26 +2,32 @@
     width: 100px;
     overflow: hidden;
     white-space: nowrap;
-  }
-  .container p {
-    text-align: center; 
-  }
-  .animate{
+}
+
+.container p {
+    text-align: center;
+}
+
+.animate {
     position: relative;
     right: -100%;
     animation: marquee 6s linear infinite;
-  }
-  .animateLonger{
+}
+
+.animateLonger {
     position: relative;
     right: -100%;
     animation: marquee 16s linear infinite;
-  }
+}
 
-  @keyframes marquee {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-200%); }
-  }
-
+@keyframes marquee {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-200%);
+    }
+}
 
 p:nth-child(1)::-webkit-scrollbar {
     height: 5px;
@@ -34,36 +40,36 @@ p:nth-child(1)::-webkit-scrollbar-track {
 p:nth-child(1)::-webkit-scrollbar-thumb {
     background: rgba(255, 255, 255, 0);
     border-radius: 10px;
-
     height: 2px;
 }
 
 p:nth-child(1)::-webkit-scrollbar-thumb:hover {
     background: rgb(255, 255, 255);
-
     height: 2px;
 }
+
 .content-wheel {
     display: grid;
-    grid-gap: 20px;
     width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(18vw, 240px));
+    grid-gap: 30px;
+    grid-auto-rows: minmax(230px, 35vh);
     justify-content: center;
-    justify-items: center;
-    align-items: center;
 }
+
 .porcentajes {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .content p:nth-child(2),
 .content p:nth-child(3) {
     color: #9C9C9C;
 }
-.porcentajes .content {
 
+.porcentajes .content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -97,7 +103,6 @@ circle:nth-child(1) {
 svg {
     border-radius: 50%;
     background-color: #192239;
-
 }
 
 @keyframes rellenar {
@@ -116,15 +121,15 @@ circle:nth-child(2) {
     background: transparent;
     border: none;
     padding: 2px;
-  }
-  
-  .actions {
+}
+
+.actions {
     display: flex;
     flex-direction: row;
     gap: 10px;
     margin-top: 10px;
-  }
-  
-  .actions img {
+}
+
+.actions img {
     width: 15px;
-  }
+}
