changed functionality of update button in all view, now it return the id of the element, check example in area-view/areas

--- a/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.html
+++ b/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.html
@@ -14,7 +14,7 @@
           <p>{{view.itemPercentaje}}%</p>
         </div>
         <div class="actions">
-          <button (click)="openModalUpdate(this.view)"><img src="../../../assets/icons/reload.svg"></button>
+          <button (click)="openModalUpdate(this.view.itemId)"><img src="../../../assets/icons/reload.svg"></button>
           <button (click)="deleteItem(this.view.itemId, this.view.itemName)"><img
               src="../../../assets/icons/delete.svg"></button>
           <button (click)="viewInformation(view.itemId)"><img
