--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -19,7 +19,7 @@
           <a><button>ir</button></a>
         </div>
         <div class="actions">
-          <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
+          <button (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
           <button (click)="deleteItem(item.itemId, item.itemName)"><img src="../../../assets/icons/delete.svg"></button>
           <button (click)="viewInformation(item.itemId)"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
         </div>
