--- a/src/app/Modules/Components/board-table/board-table.component.html
+++ b/src/app/Modules/Components/board-table/board-table.component.html
@@ -13,7 +13,7 @@
                     <td *ngFor="let data of item.itemData"> {{data}} </td>
                     <td>
                         <div class="actions">
-                            <button (click)="openModalUpdate(item)"><img
+                            <button (click)="openModalUpdate(item.itemId)"><img
                                     src="../../../assets/icons/reload.svg"></button>
                             <button (click)="deleteItem(item.itemId, item.itemName)"><img
                                     src="../../../assets/icons/delete.svg"></button>
