--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -14,7 +14,7 @@
             <p>{{item.itemPercentaje}}%</p>
           </div>
           <div class="actions">
-            <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
+            <button (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
             <button (click)="deleteItem(item.itemId, item.itemName)"><img
                 src="../../../assets/icons/delete.svg"></button>
             <button (click)="viewInformation(item.itemId)"><img
