--- a/src/app/Modules/Components/regular-chart/regular-chart.component.html
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.html
@@ -7,9 +7,9 @@
             </div>
             <div class="description">
                 <p>{{item.itemName}}</p>
-                <p>Code {{item.itemCode}}</p>
-                <p *ngIf="item.itemHours">{{item.itemHours}} horas estimadas</p>
-                <p *ngIf="item.itemOne">{{item.itemOne}} Raps esperados</p>
+                <p>{{item.itemCode}}</p>
+                <p *ngIf="item.itemHours">{{item.itemHours}}</p>
+                <p *ngIf="item.itemOne">{{item.itemOne}}</p>
                 <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
                 <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
                 <p *ngIf="item.itemFour">{{ item.itemFour }}</p>
