--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -1,18 +1,17 @@
 <div *ngIf="generate">
     <div class="content-wheel">
         <div class="charge_wheel" *ngFor="let item of  this.view | Paginate: page_size: page_number">
-            <div class="porcentajes" style="--porcentaje: {{item.itemPorcentajes}}">
+            <div class="porcentajes" style="--porcentaje: {{item.itemPercentaje}}">
                 <div class="content">
                     <div class="container">
                         <p [ngClass]="{'animateLonger': item.itemName.length >= 20,'animate': item.itemName.length < 20 && item.itemName.length > 11}">
-                            Cod: {{item.itemName}}
+                            {{item.itemName}}
                         </p>
-                        <p *ngIf="item.itemCode"> Cod: {{item.itemCode}} </p>
-                        <p *ngIf="item.itemOne"> Cod: {{item.itemOne}} </p>
+                        <p *ngIf="item.itemCode">{{item.itemCode}} </p>
+                        <p *ngIf="item.itemOne">{{item.itemOne}} </p>
                         <p *ngIf="item.itemTwo"> {{item.itemTwo}} </p>
                         <p *ngIf="item.itemThree"> {{item.itemThree}} </p>
-                        <p *ngIf="item.itemFour"> {{item.itemFour}} </p>
-                        <p>{{item.itemPorcentajes}}%</p>
+                        <p>{{item.itemPercentaje}}%</p>
                     </div>
                     <div class="actions">
                         <button (click)="openModalUpdate(item)"><img src="../../../assets/icons/reload.svg"></button>
