--- a/src/app/Modules/Components/regular-chart/regular-chart.component.html
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.html
@@ -3,7 +3,7 @@
         <div class="training-program" *ngFor="let item of view | Paginate: page_size: page_number">
             <div class="active-tokens">
                 <p>{{item.itemEnfasis}}</p>
-                <p> {{item.itemMessage}}</p>
+                <p> {{item.itemMessagge}}</p>
             </div>
             <div class="description">
                 <p>{{item.itemName}}</p>
