--- a/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.css
+++ b/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.css
@@ -1,21 +1,25 @@
-div.mat-dialog-content{
-    background: red;
+:root{
+    --mdc-dialog-container-color:#182034
 }
 
-.form-item{
+.form-item {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    border-bottom: #ffffff17;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    padding-bottom: 20px;
+    gap: 7px;
 }
 
-.form-body{
+.form-body {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 15px;
 }
 
-.form-content{
+.form-content {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -23,29 +27,30 @@ div.mat-dialog-content{
 }
 
 .mdc-dialog__title {
-    text-align: center!important;
+    text-align: center !important;
 
 }
-select option{
+
+select option {
     background-color: #182034;
     border: none;
     color: white;
 }
 
-select option:focus{
+select option:focus {
     background: #0a9e56;
     border: none;
     color: white;
 
 }
 
-select{
+select {
     height: 30px;
     width: 100%;
     border-radius: 10px;
 }
 
-input.success{
+input.success {
     border-color: #006B00;
 }
 
@@ -59,15 +64,99 @@ input.success{
     justify-content: space-around;
 }
 
-.button-div{
+.button-div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.update{
+.update {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 5px;
 }
+
+input[type="radio"] {}
+
+
+.switch{
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    max-width: 400px;
+    white-space: break-spaces;
+}
+
+.switch input{
+    width: 18px;
+    min-width: 18px;
+}
+
+
+.radioa{
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(110px, 130px));
+    grid-gap: 30px;
+    grid-auto-rows: minmax(10px, 30px);
+    justify-content: center
+}
+
+.selects{
+    display: grid;
+    width: 100%;
+    justify-content: center;
+}
+/************
+
+
+.switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+  }
+  
+  .switch input {
+    display:none;
+  }
+  
+  .slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    background-color: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+  }
+  
+  input:checked + .slider {
+    background-color: #66bb6a;
+  }
+  
+  input:checked + .slider:before {
+    transform: translateX(26px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }*/
+    
