--- a/src/styles.css
+++ b/src/styles.css
@@ -376,3 +376,11 @@ input[type=number]::-webkit-outer-spin-button {
 input::placeholder {
     color: #8b8b8b !important;
 }
+input[type="file"] {
+    display: flex;
+    height: 30px;
+    
+}
+input::file-selector-button {
+    height: 100%;
+}
