--- a/src/styles.css
+++ b/src/styles.css
@@ -379,6 +379,7 @@ input::placeholder {
 input[type="file"] {
     display: flex;
     height: 30px;
+    text-align: end;
     
 }
 input::file-selector-button {
