se modifico el menu para que escrollear su contenido

--- a/src/app/Modules/Pages/nomina/nomina/nomina.component.html
+++ b/src/app/Modules/Pages/nomina/nomina/nomina.component.html
@@ -1,22 +1,24 @@
-<div class="card-header">
-  <h2>Cargar tu archivo exel </h2>
+<div class="updata">
+  <div class="card-header">
+    <picture>
+      <img src="https://img.icons8.com/?size=512&id=FL94zod0xPJg&format=png" alt="">
+      <progress class="progress-bar" [value]="progreso" max="100" min="0"></progress>
+    </picture>
+    <h2>Cargar tu archivo excel</h2>
+  </div>
+  <div class="card-body">
+    <form (submit)="importarDocumetosMora($event)">
+      <div class="custom-input-file">
+        <input id="custom-input-file" type="file" name="documento">
+      </div>
+      <div class="card-footer">
+        <button [disabled]="cargandoArchivo" type="submit">Subir</button>
+      </div>
+    </form>
+  </div>
 </div>
-<div class="card-body">
-
-  <form (submit)="importarDocumetosMora($event)">
-    <div class="custom-input-file">
-      <input id="custom-input-file" type="file" name="documento">
-    </div>
-    <div class="card-footer">
-      <progress class="progress-bar" [value]="progreso" max="50"></progress>
-      <button class="add" [disabled]="cargandoArchivo" type="submit">
-        Importar
-      </button>
-    </div>
-  </form>
-</div>
-<div class="pdf" >
+<div class="pdf">
   <input type="number" name="cedula" placeholder="Cedula">
-    <button class="export" (click)="descargar()">certificado sena</button>
-    <button class="export" (click)="descargar2()">certificado terceros</button>
+  <button class="export" (click)="descargar()">certificado sena</button>
+  <button class="export" (click)="descargar2()">certificado terceros</button>
 </div>
