--- a/src/app/Modules/Pages/nomina/nomina/nomina.component.css
+++ b/src/app/Modules/Pages/nomina/nomina/nomina.component.css
@@ -1,39 +1,61 @@
-.export {
+.updata{
   display: flex;
-  width: 100px;
+  flex-direction: column;
+  border: dotted 10px #192239;
+  padding: 10px;
   justify-content: center;
   align-items: center;
-  background-color: #ffb40a;
-  border-radius: 20px;
-  color: #fff;
-  border: none;
-  padding: 16px;
-  transition: 0.3s;
-  cursor: pointer;
-  font-size: 20px;
+  text-align: center;
 }
+h2{
+  color: #b6b6b6;
+  margin:20px;
+  font-size: 30px;
+
+}
+img{
+  width: 20vw; 
+  filter: invert(70%);
+}
+.custom-input-file input{
+  width: 150px;
+  height: 100px;
+  position: relative;
+  background-color: transparent !important;
+  border: none;
+  text-align: center;
+  
+
+}
+.custom-input-file input[type=file]::file-selector-button {
+  position: absolute;
+  width: 150px;
+  top: 30px;
+  height: 60px;
+  margin-right: 20px;
+  background: #fff;
+  padding: 18px 15px;
+  border-radius: 10px;
+  color: #000000;
+  cursor: pointer;
+  transition: background .2s ease-in-out;
+
+}
+.custom-input-file input[type=file]::file-selector-button:hover  {
+  background-color: #192239;
+  color: #fff;
+  transition: background .2s ease-in-out;
+}
+
 
 .progress-bar {
   width: 96%;
   height: 43px;
-  background-color: lightgray;
+  background-color: rgba(211, 211, 211, 0.445);
+  color: #192239;
   border-radius: 18px;
   overflow: hidden;
-}
-
-.add{
-  display: flex;
-    width: 100px;
-    justify-content: center;
-    align-items: center;
-    background-color: #006b00;
-    border-radius: 20px;
-    color: #fff;
-    border: none;
-    padding: 16px;
-  transition: 0.3s;
-  cursor: pointer;
-  font-size: 20px;
+  transition: width 0.5s ease;
 }
 
 
@@ -42,5 +64,9 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+
+}
+.card-footer button{
+  
 
 }
