css fixes in components

--- a/src/app/Core/auth/company/company.component.css
+++ b/src/app/Core/auth/company/company.component.css
@@ -14,6 +14,10 @@
     align-items: center;
     padding: 0;
   }
+
+  .container li{
+    cursor: pointer;
+  }
   .content-company{
     max-width: 100%;
     padding: 10px;
