--- a/src/app/Modules/Components/icon-chart-sole/icon-chart-sole.component.css
+++ b/src/app/Modules/Components/icon-chart-sole/icon-chart-sole.component.css
@@ -8,19 +8,19 @@
 }
 
 .area {
+  position: relative;
   display: flex;
+  gap: 5px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   background-color: #11214963;
   border: solid #203363 1px;
   border-radius: 20px;
-  padding: 20px 10px;
+  padding: 15px 10px;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   width: 100%;
-
-
   cursor: pointer;
 }
 
@@ -116,9 +116,10 @@
 }
 
 .container {
-  width: 100px;
   overflow: hidden;
   white-space: nowrap;
+  height: max-content;
+  width: 150px;
 }
 
 .container p {
