--- a/src/app/Modules/Components/regular-chart/regular-chart.component.html
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.html
@@ -6,14 +6,14 @@
                 <p> {{item.itemMessagge}}</p>
             </div>
             <div class="description">
-                <p>{{item.itemName}}</p>
+                <p [ngClass]="{
+                    'animateLonger': item.itemName.length >= 20,
+                    'animate': item.itemName.length < 20 && item.itemName.length > 11
+                  }">{{item.itemName}}</p>
                 <p>{{item.itemCode}}</p>
-                <p *ngIf="item.itemHours">{{item.itemHours}}</p>
                 <p *ngIf="item.itemOne">{{item.itemOne}}</p>
                 <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
                 <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
-                <p *ngIf="item.itemFour">{{ item.itemFour }}</p>
-                <p *ngIf="item.itemFive">{{ item.itemFive }}</p>
             </div>
             <div class="actions">
                 <button (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
