--- a/src/app/Modules/Components/board-table/board-table.component.css
+++ b/src/app/Modules/Components/board-table/board-table.component.css
@@ -27,7 +27,7 @@ body {
 .container {
     text-align: left;
     overflow: hidden;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     display: table;
     padding-bottom: 10px;
@@ -86,7 +86,6 @@ body {
     overflow-x: scroll;
     margin-bottom: 30px;
     margin-top: 30px;
-    margin-right: 30px;
 
 }
 
@@ -116,5 +115,8 @@ body {
 
 .table{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
