--- a/src/styles.css
+++ b/src/styles.css
@@ -266,6 +266,7 @@ button {
     color: #fff;
     border: none;
     padding: 10px 12px;
+    padding-bottom: 14px;
     cursor: pointer;
     transition: 0.2s;
 }
